# vtvalidate

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: create-bump-version-pr.yml  node.js.yml  release.yml  unit-tests.yml
cmake/: symbols.def
lib/: index.d.ts
